K3S/ingress/dashboard/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: merox-dashboard
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.dashboard.merox.cloud`) # change to your domain
      kind: Rule
      services:
        - name: merox-dashboard
          port: 80
    - match: Host(`dashboard.merox.cloud`) # change to your domain
      kind: Rule
      services:
        - name: merox-dashboard
          port: 80
      middlewares:
        - name: default-headers
#  tls:
#    secretName: mer0x39-tls # change to your cert name
